--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+## Specific for test results due to workflows
+Test Results/
