Added download artifacts step

--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -79,6 +79,8 @@ jobs:
       - generate-bmcapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: BmcApi
@@ -89,6 +91,8 @@ jobs:
       - generate-rancherapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: RancherApi
@@ -99,6 +103,8 @@ jobs:
       - generate-networkapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: NetworkApi
@@ -109,6 +115,8 @@ jobs:
       - generate-ipapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: IpApi
@@ -119,6 +127,8 @@ jobs:
       - generate-auditapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: AuditApi
@@ -129,6 +139,8 @@ jobs:
       - generate-tagapi
     steps:
       - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
       - uses: ./.github/workflows/composite/build-sdk
         with:
           module-name: TagApi
