--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -72,85 +72,85 @@ jobs:
           gem-name: pnap_tag_api
   
   # Build stage
-  build-bmcapi:
-    name: Build BMC API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-bmcapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: BmcApi
-  build-rancherapi:
-    name: Build Rancher API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-rancherapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: RancherApi
-  build-networkapi:
-    name: Build Network API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-networkapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: NetworkApi
-  build-ipapi:
-    name: Build IP API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-ipapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: IpApi
-  build-auditapi:
-    name: Build Audit API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-auditapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: AuditApi
-  build-tagapi:
-    name: Build Tag API
-    runs-on: ubuntu-latest
-    needs:
-      - generate-tagapi
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-      - uses: ./.github/workflows/composite/build-sdk
-        with:
-          module-name: TagApi
+  # build-bmcapi:
+  #   name: Build BMC API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-bmcapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: BmcApi
+  # build-rancherapi:
+  #   name: Build Rancher API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-rancherapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: RancherApi
+  # build-networkapi:
+  #   name: Build Network API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-networkapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: NetworkApi
+  # build-ipapi:
+  #   name: Build IP API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-ipapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: IpApi
+  # build-auditapi:
+  #   name: Build Audit API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-auditapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: AuditApi
+  # build-tagapi:
+  #   name: Build Tag API
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - generate-tagapi
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Download Artifacts
+  #       uses: actions/download-artifact@v2
+  #     - uses: ./.github/workflows/composite/build-sdk
+  #       with:
+  #         module-name: TagApi
   
   # Lint stage
   lint-bmcapi:
     name: Lint BMC API
     runs-on: ubuntu-latest
     needs:
-      - build-bmcapi
+      - generate-bmcapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
@@ -162,7 +162,7 @@ jobs:
     name: Lint Rancher API
     runs-on: ubuntu-latest
     needs:
-      - build-rancherapi
+      - generate-rancherapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
@@ -174,7 +174,7 @@ jobs:
     name: Lint Network API
     runs-on: ubuntu-latest
     needs:
-      - build-networkapi
+      - generate-networkapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
@@ -186,7 +186,7 @@ jobs:
     name: Lint IP API
     runs-on: ubuntu-latest
     needs:
-      - build-ipapi
+      - generate-ipapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
@@ -198,7 +198,7 @@ jobs:
     name: Lint Audit API
     runs-on: ubuntu-latest
     needs:
-      - build-auditapi
+      - generate-auditapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
@@ -210,7 +210,7 @@ jobs:
     name: Lint Tag API
     runs-on: ubuntu-latest
     needs:
-      - build-tagapi
+      - generate-tagapi
     steps:
       - uses: actions/checkout@v2
       - name: Download Artifacts
