--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -12,18 +12,26 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Check if Release Branch
+      shell: bash
+      if: startsWith(github.head_ref, 'release') == false && github.head_ref != 'master'
+      id: checkReleaseBranch
+      run: |
+        echo "Release or master source branch. Skipping generation"
+        echo "::set-output name=IS_RELEASE_BRANCH::true"
     - name: Install node
+      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
       uses: actions/setup-node@v2
     - name: Install openapi-generator-cli
+      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
       shell: bash
       run: npm install -g @openapitools/openapi-generator-cli
     - name: Generate BMC API
+      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
       shell: bash
       run: openapi-generator-cli generate -i ${{ inputs.spec-link }} -c openapi-generator-config.yaml -o ${{ inputs.module-name }} --additional-properties moduleName=${{ inputs.module-name }} --additional-properties gemName=${{ inputs.gem-name }}
-    - name: Initialize VERSION file
-      shell: bash
-      run: touch ${{ inputs.module-name }}/VERSION
     - name: Upload Artifacts
+      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
       uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.module-name }}
