--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -58,12 +58,86 @@ jobs:
         with:
           module-name: TagApi
 
+  # Lint stage
+  lint-bmcapi:
+    name: Lint BMC API
+    runs-on: ubuntu-latest
+    needs:
+      - build-bmcapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: BmcApi
+  lint-rancherapi:
+    name: Lint Rancher API
+    runs-on: ubuntu-latest
+    needs:
+      - build-rancherapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: RancherApi
+  lint-networkapi:
+    name: Lint Network API
+    runs-on: ubuntu-latest
+    needs:
+      - build-networkapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: NetworkApi
+  lint-ipapi:
+    name: Lint IP API
+    runs-on: ubuntu-latest
+    needs:
+      - build-ipapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: IpApi
+  lint-auditapi:
+    name: Lint Audit API
+    runs-on: ubuntu-latest
+    needs:
+      - build-auditapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: AuditApi
+  lint-tagapi:
+    name: Lint Tag API
+    runs-on: ubuntu-latest
+    needs:
+      - build-tagapi
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - uses: ./.github/workflows/composite/lint-sdk
+        with:
+          module-name: TagApi
+
   # Test stage
   test-bmcapi:
     name: Test Bmc API
     runs-on: ubuntu-latest
     needs:
-      - build-bmcapi
+      - lint-bmcapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -81,7 +155,7 @@ jobs:
     name: Test Rancher API
     runs-on: ubuntu-latest
     needs:
-      - build-rancherapi
+      - lint-rancherapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -99,7 +173,7 @@ jobs:
     name: Test Network API
     runs-on: ubuntu-latest
     needs:
-      - build-networkapi
+      - lint-networkapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -117,7 +191,7 @@ jobs:
     name: Test Ip API
     runs-on: ubuntu-latest
     needs:
-      - build-ipapi
+      - lint-ipapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -135,7 +209,7 @@ jobs:
     name: Test Audit API
     runs-on: ubuntu-latest
     needs:
-      - build-auditapi
+      - lint-auditapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -153,7 +227,7 @@ jobs:
     name: Test Tag API
     runs-on: ubuntu-latest
     needs:
-      - build-tagapi
+      - lint-tagapi
     services:
       mockserver:
         image: mockserver/mockserver:5.13.0
@@ -223,4 +297,4 @@ jobs:
           gem build *.gemspec
 
           echo Publishing...
-          gem push *.gem
+          # gem push *.gem
