--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -354,6 +354,7 @@ jobs:
   push-changes:
     name: Push Changes
     runs-on: ubuntu-latest
+    if: startsWith(github.head_ref, 'release') == false && github.head_ref != 'master'
     needs:
       - test-bmcapi
       - test-rancherapi
