--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -18,20 +18,20 @@ runs:
       id: checkReleaseBranch
       run: |
         echo "Release or master source branch. Skipping generation"
-        echo "::set-output name=IS_RELEASE_BRANCH::true"
+        echo "::set-output name=IS_FEATURE_BRANCH::true"
     - name: Install node
-      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
+      if: ${{ steps.checkReleaseBranch.outputs.IS_FEATURE_BRANCH }}
       uses: actions/setup-node@v2
     - name: Install openapi-generator-cli
-      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
+      if: ${{ steps.checkReleaseBranch.outputs.IS_FEATURE_BRANCH }}
       shell: bash
       run: npm install -g @openapitools/openapi-generator-cli
     - name: Generate BMC API
-      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
+      if: ${{ steps.checkReleaseBranch.outputs.IS_FEATURE_BRANCH }}
       shell: bash
       run: openapi-generator-cli generate -i ${{ inputs.spec-link }} -c openapi-generator-config.yaml -o ${{ inputs.module-name }} --additional-properties moduleName=${{ inputs.module-name }} --additional-properties gemName=${{ inputs.gem-name }}
     - name: Upload Artifacts
-      if: ${{ steps.checkReleaseBranch.outputs.IS_RELEASE_BRANCH }}
+      if: ${{ steps.checkReleaseBranch.outputs.IS_FEATURE_BRANCH }}
       uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.module-name }}
