--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -77,11 +77,10 @@ jobs:
     name: Push Changes
     runs-on: ubuntu-latest
     if: |
-      github.event_name == 'schedule' || (
-        startsWith(github.head_ref, 'release') == false &&
-        startsWith(github.base_ref, 'release') == false &&
-        github.head_ref != 'master' &&
-        github.base_ref != 'master' &&
+      (github.event_name == 'schedule') ||
+      (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/develop') || (
+        startsWith(github.head_ref, 'feature') == true &&
+        github.base_ref == 'develop' &&
         github.event.pull_request.head.repo.full_name == 'phoenixnap/ruby-sdk-bmc'
       )
     needs:
