--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
-/BmcApi/.gitlab-ci.yml
+.gitlab-ci.yml
 
 # Used by dotenv library to load environment variables.
 # .env
