ruby version logs

--- a/.github/workflows/composite/build-sdk/action.yml
+++ b/.github/workflows/composite/build-sdk/action.yml
@@ -9,4 +9,4 @@ runs:
   steps:
     - name: Build gemspec
       shell: bash
-      run: cd ${{ inputs.module-name }} && gem build *.gemspec
+      run: cd ${{ inputs.module-name }} && ruby -v && gem build *.gemspec
