--- a/.github/workflows/composite/lint-sdk/action.yml
+++ b/.github/workflows/composite/lint-sdk/action.yml
@@ -7,12 +7,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install ruby
-      shell: bash
-      run: sudo apt-get install ruby-full
+    - uses: ./.github/workflows/composite/setup-ruby
     - name: Install rubocop (1.11)
       shell: bash
       run: sudo gem install rubocop --version 1.11
     - name: Lint module
       shell: bash
-      run: cd ${{ inputs.module-name }} && ruby -v && rubocop --fail-level=error
+      run: cd ${{ inputs.module-name }} && rubocop --fail-level=error
