Updated setup-ruby to use supported version

--- a/.github/workflows/composite/setup-ruby/action.yml
+++ b/.github/workflows/composite/setup-ruby/action.yml
@@ -4,6 +4,6 @@ runs:
   using: "composite"
   steps:
     - name: Setup Ruby with Version
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.1
