--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -397,6 +397,8 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
         with:
           path: test-reports
       - name: Publish Test Results
