--- a/.github/workflows/composite/test-sdk/action.yml
+++ b/.github/workflows/composite/test-sdk/action.yml
@@ -10,12 +10,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install ruby
-      shell: bash
-      run: sudo apt-get install ruby-full
+    - uses: actions/download-artifact@v3
+    - uses: ./.github/workflows/composite/setup-ruby
     - name: Install Bundler
       shell: bash
-      run: sudo gem install bundler
+      run: gem install bundler
     - name: Run tests
       shell: bash
       run: |
