--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -281,12 +281,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_bmc_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
   test-rancherapi:
     name: Test Rancher API
     runs-on: ubuntu-latest
@@ -297,12 +301,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_rancher_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
   test-networkapi:
     name: Test Network API
     runs-on: ubuntu-latest
@@ -313,12 +321,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_network_api.rb   
           test-report-dir: tests   
+          ruby-version: ${{ matrix.ruby-version }}
   test-ipapi:
     name: Test Ip API
     runs-on: ubuntu-latest
@@ -329,12 +341,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_ip_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
   test-auditapi:
     name: Test Audit API
     runs-on: ubuntu-latest
@@ -345,12 +361,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_audit_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
   test-tagapi:
     name: Test Tag API
     runs-on: ubuntu-latest
@@ -361,12 +381,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_tag_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
   test-networkstorageapi:
     name: Test Network Storage API
     runs-on: ubuntu-latest
@@ -377,12 +401,16 @@ jobs:
         image: mockserver/mockserver:5.13.0
         ports:
           - 1080:1080
+    strategy:
+      matrix:
+        ruby-version: [ '2.4', '3.1' ]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/composite/test-sdk
         with:
           test-file: tc_networkstorage_api.rb
           test-report-dir: tests
+          ruby-version: ${{ matrix.ruby-version }}
 
   publish-test-results:
     name: Publish Test Results
