--- a/.github/workflows/generate-sdk.yml
+++ b/.github/workflows/generate-sdk.yml
@@ -282,6 +282,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -302,6 +303,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -322,6 +324,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -342,6 +345,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -362,6 +366,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -382,6 +387,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -402,6 +408,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
