--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -150,6 +150,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -170,6 +171,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -190,6 +192,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -210,6 +213,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -230,6 +234,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -250,6 +255,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
@@ -270,6 +276,7 @@ jobs:
         ports:
           - 1080:1080
     strategy:
+      fail-fast: false
       matrix:
         ruby-version: [ '2.4', '3.1' ]
     steps:
