--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -17,7 +17,7 @@ runs:
       if: startsWith(github.head_ref, 'release') == false && github.head_ref != 'master' && startsWith(github.head_ref, 'hotfix') == false
       id: checkReleaseBranch
       run: |
-        echo "Release or master source branch. Skipping generation"
+        echo "Is feature branch (${{ github.head_ref }}) - proceeding with generation."
         echo "::set-output name=IS_FEATURE_BRANCH::true"
     - name: Install node
       if: ${{ steps.checkReleaseBranch.outputs.IS_FEATURE_BRANCH }}
