--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -14,7 +14,7 @@ runs:
   steps:
     - name: Check if Release Branch
       shell: bash
-      if: startsWith(github.head_ref, 'release') == false && github.head_ref != 'master' && startsWith(github.ref_name, 'hotfix')
+      if: startsWith(github.head_ref, 'release') == false && github.head_ref != 'master' && startsWith(github.ref_name, 'hotfix') == false
       id: checkReleaseBranch
       run: |
         echo "Is feature branch (${{ github.ref_name }}) or merging into a non-static branch (${{ github.head_ref }}) - proceeding with generation."
