Updated checkout and push

--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -83,10 +83,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-          fetch-depth: 0
-          ref: ${{ github.event_name == 'schedule' && 'develop' || github.head_ref }}
+        # with:
+        #   persist-credentials: false
+        #   fetch-depth: 0
+        #   ref: ${{ github.event_name == 'schedule' && 'develop' || github.head_ref }}
       - name: Download Artifacts
         uses: actions/download-artifact@v3
       - name: Move spec files
@@ -103,4 +103,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.event_name == 'schedule' && 'develop' || github.head_ref }}
+          branch: ${{ github.ref }}
