hot fix workflow

--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -51,8 +51,8 @@ jobs:
           echo Entering ${{ needs.process-tag-info.outputs.module }}...
           # cd ./${{ needs.process-tag-info.outputs.module }}
 
-          echo Building (SKIPPED)...
-          #gem build *.gemspec
+          echo Building...
+          gem build *.gemspec
 
-          echo Publishing (SKIPPED)...
-          # gem push *.gem
+          echo Publishing...
+          gem push *.gem
