--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -2,9 +2,13 @@ name: (internal) - Publish
 
 on:
   workflow_call:
+    inputs:
+      ruby-api-key:
+        required: true
+        type: string
 
 env:
-  GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+  GEM_HOST_API_KEY: ${{ inputs.ruby-api-key }}
 
 jobs:
   process-tag-info:
