--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -52,5 +52,5 @@ jobs:
       - build-and-test-tagapi
       - build-and-test-networkstorageapi
     uses: ./.github/workflows/_publish.yml
-    with: 
-      ruby-api-key: ${{ secrets.RUBYGEMS_API_KEY }}
+    secrets: 
+      RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
