--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -2,13 +2,9 @@ name: (internal) - Publish
 
 on:
   workflow_call:
-    inputs:
-      ruby-api-key:
-        required: true
-        type: string
 
 env:
-  GEM_HOST_API_KEY: ${{ inputs.ruby-api-key }}
+  GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
 
 jobs:
   process-tag-info:
