--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -2,6 +2,9 @@ name: (internal) - Publish
 
 on:
   workflow_call:
+    secrets:
+      RUBYGEMS_API_KEY:
+        required: true
 
 env:
   GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
