--- a/.github/workflows/publish-all-sdks-dry-run.yml
+++ b/.github/workflows/publish-all-sdks-dry-run.yml
@@ -1,8 +1,7 @@
 name: publish-all-sdks-dry-run
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
 
 env:
   GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
