--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -24,7 +24,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
-      - run: |
+      - if: ${{ !inputs.dry_run }}
+        run: |
           echo Entering ${{ inputs.gem_to_publish }}...
           cd ./${{ needs.process-tag-info.outputs.module }}
 
@@ -33,4 +34,3 @@ jobs:
 
           echo Publishing...
           gem push *.gem
-        if: ${{ !inputs.dry_run }}
