--- a/.github/workflows/validate-all.yml
+++ b/.github/workflows/validate-all.yml
@@ -42,6 +42,11 @@ jobs:
     with:
       module-name: NetworkStorageApi
       test-file: tc_networkstorage_api.rb
+  build-and-test-locationapi:
+    uses: ./.github/workflows/_common.yml
+    with:
+      module-name: LocationApi
+      test-file: tc_location_api.rb
 
   publish-test-results:
     name: Publish Test Results
@@ -53,6 +58,7 @@ jobs:
       - build-and-test-auditapi
       - build-and-test-tagapi
       - build-and-test-networkstorageapi
+      - build-and-test-location-api
     runs-on: ubuntu-latest
     if: always()
     steps:
