--- a/.github/workflows/_common.yml
+++ b/.github/workflows/_common.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           module-name: ${{ inputs.module-name }}
   test:
-    name: Test ${{ inputs.module-name }}
+    name: Test ${{ inputs.module-name }} ruby v ${{ matrix.ruby-version }}
     runs-on: ubuntu-latest
     needs:
       - lint
